<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.learn2crack.nfc.MainActivity">

    <EditText
        android:id="@+id/tag_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text" />
    <EditText
        android:id="@+id/tag_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_id"
        android:inputType="text"/>

    <EditText
        android:id="@+id/tag_location"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_name" />

    <EditText
        android:id="@+id/tag_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:hint="@string/x"
        app:layout_constraintEnd_toStartOf="@+id/tag_y"
        app:layout_constraintStart_toEndOf="@+id/tag_location"
        app:layout_constraintTop_toTopOf="@+id/tag_location" />

    <EditText
        android:id="@+id/tag_y"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/y"
        app:layout_constraintEnd_toEndOf="@+id/tag_name"
        app:layout_constraintStart_toEndOf="@+id/tag_x"
        app:layout_constraintTop_toTopOf="@+id/tag_x" />

    <Button
        android:id="@+id/btn_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/message_write_tag"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_location" />

    <Button
        android:id="@+id/btn_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/message_read_tag"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_write" />
</android.support.constraint.ConstraintLayout>
